--- a/paquescolar-web/src/main/webapp/app/comunes/dialogos/proveedor/filtroProveedor.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/dialogos/proveedor/filtroProveedor.xhtml
@@ -48,7 +48,7 @@
                         </p:panelGrid>
                     </p:column>
                     <p:column headerText="Foto" width="70" style="text-align: center;">
-                        <p:graphicImage value="/DynamicImageServlet?file=#{emp.idPersona.urlImagen}" />
+                        <p:graphicImage value="/DynamicImageServlet?file=#{emp.idPersona.urlImagen}" width="75"/>
                     </p:column>
                 </p:dataTable>
                 <f:facet name="footer">
