--- a/paquescolar-web/src/main/webapp/app/inicial.xhtml
+++ b/paquescolar-web/src/main/webapp/app/inicial.xhtml
@@ -41,7 +41,7 @@
                             <p:inputText value="#{proveedorController.numeroNit}"/>
 
                             
-                            <p:commandButton value="Generar codigos" icon="fa fa-print" disabled="false" action="#{proveedorController.generarCodigoSeguridad()}" />
+                            <p:commandButton value="Generar codigos" icon="fa fa-print" disabled="false" action="#{proveedorController.generarCodigo()}" />
                             
                             <f:facet name="footer">
                                 <p:commandButton value="Generar no Items" icon="fa fa-print" disabled="false" action="#{proveedorController.calcularNoItems()}" />
