--- a/paquescolar-web/src/main/webapp/app/reg08Usuario.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg08Usuario.xhtml
@@ -97,7 +97,7 @@
                             </h:panelGroup>
 
                             <p:outputLabel value="e-Mail: " />
-                            <p:inputText id="correo" value="#{personaController.edicion.email}" disabled="#{personaController.deshabilitado}" size="40"/>
+                            <p:inputText id="correo" value="#{personaController.emailPer}" disabled="#{personaController.deshabilitado}" size="40"/>
                         </p:panelGrid>
                     </p:outputPanel>
 
