--- a/paquescolar-web/src/main/webapp/index.xhtml
+++ b/paquescolar-web/src/main/webapp/index.xhtml
@@ -53,7 +53,7 @@
                             </div>
                             <div class="ui-g-12">
                                 <p:tabView >
-                                    <p:tab title="Funcionario o">
+                                    <p:tab title="Funcionario">
                                         <f:facet name="title">
                                             <h:outputText value="Funcionario"/>
                                             <i class="fa fa-user" style="font-size: 18px;" />
