--- a/paquescolar-web/src/main/webapp/app/inicial.xhtml
+++ b/paquescolar-web/src/main/webapp/app/inicial.xhtml
@@ -53,7 +53,7 @@
 
                         <br/>
                         <br/>
-                        <p:commandButton value="Enviar" /> 
+                        <p:commandButton value="Cargar matricula" action="#{catalogosGeneralesController.cargarMatricula()}"/> 
                     </p:outputPanel>
 
                     <p:outputPanel rendered="#{catalogosGeneralesController.isUsuarioRafa()}">
