--- a/paquescolar-web/src/main/webapp/app/comunes/fragmentos/contrataciones/ofertaListadoProveedores.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/fragmentos/contrataciones/ofertaListadoProveedores.xhtml
@@ -51,6 +51,11 @@
                     <h:outputText value="#{capaEmpresa.porcentajeCapacidad}">
                         <f:convertNumber pattern="#,##0.000"/>
                     </h:outputText>
+                    
+                    <h:outputText value="Porcetaje de cumpliento por Nota de pruebas:"/>
+                    <h:outputText value="#{capaEmpresa.porcentajeNota}">
+                        <f:convertNumber pattern="#,##0.000"/>
+                    </h:outputText>
                 </h:panelGrid>
             </p:outputPanel>
 
