--- a/cooperacion-web/src/main/webapp/app/mantto/inicioManttos.xhtml
+++ b/cooperacion-web/src/main/webapp/app/mantto/inicioManttos.xhtml
@@ -31,7 +31,7 @@
                     <br/><br/>
                 </div>
             </div>
-            <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'asociarMetaOds.mined';" >
+            <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'asociarMetaOds.mined';" style="display:#{(userBean.perfilUsuario eq 'CE')?'none':'block'}" >
                 <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
                     <br/><br/>        
                     <p:graphicImage name="link.png" library="images" style="background-color: white;" width="80" />
