--- a/cooperacion-web/src/main/webapp/app/fragmento/manttoCooperante.xhtml
+++ b/cooperacion-web/src/main/webapp/app/fragmento/manttoCooperante.xhtml
@@ -102,7 +102,7 @@
                     <div class="p-col-12 p-md-2">
                         <p:commandButton value="Cancelar" icon="pi pi-ban" process="@this" action="inicioManttos.mined?faces-redirect=true"/>
                     </div>
-                    <div class="p-col-12 p-md-2">
+                    <div class="p-col-12 p-md-2" style="display:#{(userBean.perfilUsuario eq 'CE')?'none':'block'}">
                         <p:commandButton value="Modifcar" icon="pi pi-pencil" process="@this" onclick="PF('dlgCooperante').show();" />
                     </div>
                 </div>
