previously make change in module Proveedor. Before 2023 process

--- a/paquescolar-web/src/main/webapp/app/reg10LiquidacionFinan.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg10LiquidacionFinan.xhtml
@@ -170,6 +170,16 @@
                         <p:outputLabel value="#{liquidacionFinancieraView.conDetPagoDto.montoActual}" class="negrita">
                             <f:convertNumber pattern="#,##0.00"/>
                         </p:outputLabel>
+                        
+                        
+                        <p:outputLabel value="Documento de pago: "/>
+                        <p:outputLabel value="#{liquidacionFinancieraView.conDetPagoDto.tipoDoc}" class="negrita"/>
+                        <p:outputLabel value="Número de documento: "/>
+                        <p:outputLabel value="#{liquidacionFinancieraView.conDetPagoDto.noDocPago}" class="negrita"/>
+                        <p:outputLabel value="Fecha de documento: "/>
+                        <p:outputLabel value="#{liquidacionFinancieraView.conDetPagoDto.fechaDocPago}" class="negrita">
+                            <f:convertDateTime pattern="dd/MM/yyyy"/>
+                        </p:outputLabel>
                     </h:panelGrid>
                 </p:panel>
             </div>
